--- a/pru_sw/example_apps/SPItest/Makefile
+++ b/pru_sw/example_apps/SPItest/Makefile
@@ -7,12 +7,12 @@ BINDIR?=../bin
 CFLAGS+= -Wall -I$(INCDIR_APP_LOADER) -D__DEBUG -O2 -mtune=cortex-a8 -march=armv7-a
 LDFLAGS+=-L$(LIBDIR_APP_LOADER) -lprussdrv -lpthread
 OBJDIR=obj
-TARGET=$(BINDIR)/SPItest
+TARGET=$(BINDIR)/SPIScan
 
 _DEPS = 
 DEPS = $(patsubst %,$(INCDIR_APP_LOADER)/%,$(_DEPS))
 
-_OBJ = SPItest.o
+_OBJ = SPIScan.o
 OBJ = $(patsubst %,$(OBJDIR)/%,$(_OBJ))
 
 
