--- a/pru_sw/example_apps/SPItest/BB-BONE-MIGHTY-00A1.dts
+++ b/pru_sw/example_apps/SPItest/BB-BONE-MIGHTY-00A1.dts
@@ -21,10 +21,13 @@
 		"P8.15", /* ADC BUSY pru0: pr1_pru0_pru_r31_15	*/
 		"P8.11", /* ADC CONV pru0: pr1_pru0_pru_r30_15	*/
 		"P8.12", /* LDAC     pru0: pr1_pru0_pru_r30_14	*/
+		"P8.7",  /*GPIO os_0*/
+		"P8.8",  /*GPIO os_1*/
+		"P8.9",  /*GPIO os_2*/
 		/* the pin header P9 uses */
 		"P9.17", /* SPI0_CS0	*/
-		"P9.18", /* SPI0_D1_MOSI  */
-		"P9.21", /* SPI0_D0_MISO  */
+		"P9.18", /* SPI0_D1   */
+		"P9.21", /* SPI0_D0_MOSI  */
 		"P9.22", /* SPI0_SCLK */
 		"P9.25", /* ADC RESET pru0: pr1_pru0_pru_r30_7	*/
 		"P9.28", /* SPI1_CS0 	*/
@@ -48,7 +51,7 @@
 					0x194 0x13	/* P9_29 = mcasp0_fsx.spi1_d0	  , OUTPUT_PULLUP  | MODE3 */
 					0x198 0x33	/* P9_30 = mcasp0_axr0.spi1_d1	  , INPUT_PULLUP | MODE3 */
 					0x19c 0x13	/* P9_28 = mcasp0_ahclkr.spi1_cs0 , OUTPUT_PULLUP | MODE3 */
-					0x164 0x12  /* P9_42 = GPIO0_7 =  eCAP0_in_PWM0_out.gpio0[7] , OUTPUT_PULLUP | MODE2 */
+					0x164 0x12      /* P9_42 = GPIO0_7 =  eCAP0_in_PWM0_out.gpio0[7] , OUTPUT_PULLUP | MODE2 */
 
 				>;
 			};
@@ -67,6 +70,9 @@
 					0x034 0x16 	/* P8_11 = CONV,  OUTPUT_PULLUP   | MODE6 */
 					0x030 0x16 	/* P8_12 = LDAC,  OUTPUT_PULLUP   | MODE6 */
 					0x1aC 0x05 	/* P9_25 = RESET, OUTPUT_PULLDOWN | MODE5 */
+					0x090 0x07 	/* P8_7  = OS_0 ,GPIO2_2,   OUTPUT_PULLDOWN | MODE 7 */
+					0x094 0x07 	/* P8_8  = OS_1,GPIO2_3    gpmc_oen_ren.gpio2[3], OUTPUT_PULLDOWN | MODE 7*/
+					0x09C 0x07 	/* P8_9  = OS_2,GPIO2_5,    OUTPUT_PULLDOWN | MODE 7*/
 				>;
 			};
 		};
